# SherpAI-Schemas

./: .gitignore  README.md  pyproject.toml
sherpai-schemas/: __init__.py
sherpai_schemas/: __init__.py  functions.py  llm_interface.py  schemas.py  vectordb_interface.py
src/: schemas.py
