[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sherpai-schemas"
version = "0.1.0"
description = "Shared schema definitions for SherpAI"
requires-python = ">=3.12"

dependencies = [
    "pandas==3.0.1",
    "requests==2.33.1",
    "pymilvus==2.6.11"
]

[tool.hatch.build.targets.wheel]
packages = ["sherpai_schemas"]
